kubernetes/spack/gitlab-spack-io/web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: spack
  labels:
    app: gitlab
    svc: web
spec:
  selector:
    matchLabels:
      app: gitlab
      svc: web
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
        svc: web
    spec:
      containers:
      - name: gitlab
        image: "gitlab/gitlab-ee:11.2.1-ee.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /help
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /help
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: data
          mountPath: /etc/gitlab
          subPath: etc
        - name: data
          mountPath: /gitlab-data
          subPath: data
        - name: data
          mountPath: /var/opt/gitlab/git-data/repositories
          subPath: repo
        - name: data
          mountPath: /var/opt/gitlab/gitlab-ci
          subPath: ci
        - name: data
          mountPath: /var/opt/gitlab/gitlab-rails/shared/artifacts
          subPath: artifacts
      nodeSelector:
        "beta.kubernetes.io/instance-type": "m4.large"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitlab-data
