kubernetes/spack/gitlab-spack-io/web/statefulsets.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab
  namespace: spack
  labels:
    app: gitlab
    srv: web
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: web
  replicas: 1
  serviceName: gitlab
  template:
    metadata:
      labels:
        app: gitlab
        srv: web
    spec:
      containers:
      - name: gitlab
        image: "gitlab/gitlab-ee:11.2.1-ee.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /help
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /help
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: gitlab-vol-etc
          mountPath: /etc/gitlab
        - name: gitlab-vol-data
          mountPath: /gitlab-data
        - name: gitlab-vol-repo
          mountPath: /var/opt/gitlab/git-data/repositories
        resources:
          requests:
            memory: 8Gi
            cpu: 1
          limits:
            memory: 12Gi
            cpu: 2
  volumeClaimTemplates:
  - metadata:
      name: gitlab-vol-data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 100Gi
  - metadata:
      name: gitlab-vol-etc
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 100Gi
  - metadata:
      name: gitlab-vol-repo
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 200Gi
