kubernetes/spack/gitlab-spack-io/web/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: spack
  labels:
    app: gitlab
    svc: web
spec:
  type: ClusterIP
  selector:
    app: gitlab
    svc: web
  ports:
  - name: http
    port: 80
    targetPort: http
    # BUG(opadron): Any TCP protocol like ssh-, over k8s-, through AWS ELB-, is
    #               broken if the same load balancer also needs to handle web
    #               traffic.
    #
    # https://github.com/kubernetes/kubernetes/issues/40244
  - name: ssh
    port: 22
    targetPort: 22
