kubernetes/spack/gitlab-spack-io/web/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: spack
  #   annotations:
  #     nginx.ingress.kubernetes.io/proxy-body-size: 6144M
spec:
  tls:
  - secretName: tls-gitlab
  rules:
  - host: gitlab.spack.io
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80
